# app/models/account.model.go
@@ -9,12 +9,12 @@ import (
 )
 
 type Account struct {
-	BaseModel
+	gorm.Model
 	Email       string `gorm:"uniqueIndex;not null" json:"email"`
 	Password    string `gorm:"not null" json:"password"`
 	Firstname   string `gorm:"" json:"firstname"`
 	Lastname    string `gorm:"" json:"lastname"`
-	SecretToken string `gorm:"type:varchar(8)" json:"secretToken"`
+	TokenSecret string `gorm:"type:varchar(8)" json:"tokenSecret"`
 
 	Todos []Todo
 }
