# docs/swagger.json
@@ -87,14 +87,14 @@
                 "password": {
                     "type": "string"
                 },
-                "secretToken": {
-                    "type": "string"
-                },
                 "todos": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/models.Todo"
                     }
+                },
+                "tokenSecret": {
+                    "type": "string"
                 },
                 "updatedAt": {
                     "type": "string"
